# onno-framework

./: .gitignore  .gitkeep  AGENTS.md  BUILDING_ERPS_WITH_AGENTS.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  NOTICE  README.md  ROADMAP.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: launch.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
community/: README.md  registry.json  registry.schema.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONSUMING.md  EXTENDING.md  GOTCHAS.md  HEADLESS_READ_API.md  MEDIA_UPLOADS.md  RUNNING.md  index.md  package-lock.json  package.json
example/: README.md  build.gradle.kts
framework/: build.gradle.kts
framework-spring-boot-starter/: build.gradle.kts
gradle/: libs.versions.toml
licenses/: HEADER-OSS.txt
onec-auth-starter/: README.md  build.gradle.kts
onec-cluster-starter/: README.md  build.gradle.kts
onec-desktop-gradle-plugin/: build.gradle.kts  settings.gradle.kts
onec-desktop-starter/: README.md  build.gradle.kts
onec-desktop-starter/src/main/tauri/src-tauri/: Cargo.toml  tauri.conf.json
onec-desktop-starter/src/main/tauri/src-tauri/capabilities/: default.json
onec-desktop-starter/src/main/tauri/src-tauri/src/: main.rs
onec-framework/: build.gradle.kts
onec-framework-starter/: README.md  build.gradle.kts
onno-desktop-starter/src/main/tauri/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
onno-desktop-starter/src/main/tauri/src-tauri/capabilities/: default.json
onno-desktop-starter/src/main/tauri/src-tauri/src/: main.rs
(+1638 files in other folders)
