[package]
name = "onec-desktop-shell"
version = "0.1.0"
description = "Generic onec desktop shell — boots the embedded onec server and renders its UI."
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
